# backend/src/domains/pedido/adapter/driver/rest/controllers/pedido.controller.ts
@@ -4,7 +4,6 @@ import { CustomError } from "domains/suporte/entities/custom.error";
 import { CustomResponse } from "domains/suporte/entities/custom.response";
 import { PedidoService } from 'domains/pedido/core/applications/services/pedido.service';
 import { Pedido } from 'domains/pedido/core/entities/pedido';
-import { ItemPedido } from 'domains/pedido/core/entities/itemPedido';
 
 export class PedidoController {
 
@@ -34,10 +33,10 @@ export class PedidoController {
             throw new CustomError('Parâmetros inválidos. Por favor, verifique as informações enviadas.', 400, false, result.array())
         }
     
-        const {cpf, data, horaEntrada, horaSaida, valor, status} = request.body
+        const {cpf, data, horaEntrada, horaSaida, valorPedido, status, itensPedidos} = request.body
 
         try {
-            next( new CustomResponse(200, 'Produto atualizado', await this.service.atualiza(new Pedido (request.params.codigoPedido, cpf, data, horaEntrada, horaSaida, valor, status))))
+            next( new CustomResponse(200, 'Produto atualizado', await this.service.atualiza(new Pedido (request.params.codigoPedido, cpf, data, horaEntrada, horaSaida, valorPedido, status),itensPedidos)))
         } catch (err){
             next(new CustomError('Ops, algo deu errado na operação', 500, false, err))
         }
@@ -54,7 +53,7 @@ export class PedidoController {
         const {codigoPedido, cpf} = request.body
        
         try {
-            next( new CustomResponse(200, 'Pedido adicionado', await this.service.buscaUltimaVersao(codigoPedido, cpf)))
+            next( new CustomResponse(200, 'Pedido adicionado', await this.service.buscaUltimaVersao(codigoPedido)))
         } catch (err){
             next(new CustomError('Ops, algo deu errado na operação', 500, false, err))
         }        
